--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^7.0.1
+  adobe_xd: ^2.0.0+1
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -33,6 +36,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
