--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,21 +25,16 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.0.1
   adobe_xd: ^2.0.0+1
-  
-  
-
-
-
-
-  # The following adds the Cupertino Icons font to your application.
+  firebase_auth: ^3.0.0
+  cloud_functions: ^3.0.0
+  google_maps_flutter: ^2.0.5
+    # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
