--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.0.1
   adobe_xd: ^2.0.0+1
+  firebase_auth: ^3.0.0
+  cloud_functions: ^3.0.0
+  google_maps_flutter: ^2.0.5
 
 
 
