--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.0.1
+  flutter_bloc: ^7.0.0
   adobe_xd: ^2.0.0+1
   firebase_auth: ^3.0.0
   cloud_functions: ^3.0.0
-  google_maps_flutter: ^2.0.5
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth_web: ^3.0.1
 
 dev_dependencies:
   flutter_test:
