Cambios en la app para que funcione
Se borraron archivos que generaban errores.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,6 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.0.1
   adobe_xd: ^2.0.0+1
-  firebase_auth: ^3.0.0
-  cloud_functions: ^3.0.0
-  google_maps_flutter: ^2.0.5
     # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,7 +37,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  assets: 
+    - assets/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
