--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.14.0-0 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,6 +26,12 @@ dependencies:
   flutter_bloc: ^7.0.1
   adobe_xd: ^2.0.0+1
   equatable: ^2.0.3
+  auth: ^8.1.0
+  google_sign_in: ^5.1.1
+  firebase_auth_ui: ^1.0.1
+  cloud_firestore: ^2.5.3
+  firebase_core: ^1.8.0
+  uuid: ^3.0.5
     # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
