--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,9 @@ dependencies:
   adobe_xd: ^2.0.0+1
   equatable: ^2.0.3
   auth: ^8.1.0
-  google_sign_in: ^5.2.1
-  firebase_auth_ui: ^1.0.1
+  google_sign_in: ^5.0.4
+
+  firebase_auth: ^3.0.0
   cloud_firestore: ^2.5.3
   firebase_core: ^1.8.0
   uuid: ^3.0.5
