--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,18 @@ dependencies:
   auth: ^8.1.0
   google_sign_in: ^5.0.4
   firebase_auth: ^3.0.0
-  cloud_firestore: ^2.5.3
+ 
   firebase_core: ^1.8.0
   uuid: ^3.0.5
+  fluttertoast: ^8.0.8
     # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.3+1
   cloud_firestore_web: ^2.5.0
+  cloud_firestore: ^2.5.3
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
