--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ar.com.init.schools_maps">
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.hardware.camera"
-                  android:required="false" />
+    package="com.example.schools_maps">
+    
    <application
         android:label="schools_maps"
         android:icon="@mipmap/ic_launcher">
